QuestionPicker tests, MSVC project update

--- a/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
+++ b/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
@@ -321,6 +321,8 @@
     <ClCompile Include="..\..\..\..\Source\PlayWav.cpp" />
     <ClCompile Include="..\..\..\..\Source\PrintGui.cpp" />
     <ClCompile Include="..\..\..\..\Source\Question.cpp" />
+    <ClCompile Include="..\..\..\..\Source\QuestionPicker.cpp" />
+    <ClCompile Include="..\..\..\..\Source\QuestionProgress.cpp" />
     <ClCompile Include="..\..\..\..\Source\ScoreBuilder.cpp" />
     <ClCompile Include="..\..\..\..\Source\SerialReqManager.cpp" />
     <ClCompile Include="..\..\..\..\Source\ShareManager.cpp" />
@@ -336,6 +338,12 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Catch|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\Source\Tests\CreateDictionary.cpp" />
+    <ClCompile Include="..\..\..\..\Source\Tests\Dictionary_catchtest.cpp" />
+    <ClCompile Include="..\..\..\..\Source\Tests\MultiChoice_catchtest.cpp" />
+    <ClCompile Include="..\..\..\..\Source\Tests\MusicalTermQuestion_catchtest.cpp" />
+    <ClCompile Include="..\..\..\..\Source\Tests\QuestionPicker_catchtest.cpp" />
+    <ClCompile Include="..\..\..\..\Source\Tests\QuestionProgress_catchtest.cpp" />
     <ClCompile Include="..\..\..\..\Source\Tests\Question_catchtest.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='GTest|Win32'">true</ExcludedFromBuild>
@@ -421,6 +429,8 @@
     <ClInclude Include="..\..\..\..\Source\PlayMidi.h" />
     <ClInclude Include="..\..\..\..\Source\PlayWav.h" />
     <ClInclude Include="..\..\..\..\Source\Question.h" />
+    <ClInclude Include="..\..\..\..\Source\QuestionPicker.h" />
+    <ClInclude Include="..\..\..\..\Source\QuestionProgress.h" />
     <ClInclude Include="..\..\..\..\Source\ScoreBuilder.h" />
     <ClInclude Include="..\..\..\..\Source\SerialReqManager.h" />
     <ClInclude Include="..\..\..\..\Source\ShareManager.h" />
@@ -429,6 +439,7 @@
     <ClInclude Include="..\..\..\..\Source\TappableZoom.h" />
     <ClInclude Include="..\..\..\..\Source\TappableHint.h" />
     <ClInclude Include="..\..\..\..\Source\TappableZoomInfoLeaf.h" />
+    <ClInclude Include="..\..\..\..\Source\Tests\CreateDictionary.h" />
     <ClInclude Include="..\..\..\..\Source\Topic.h" />
     <ClInclude Include="..\..\..\..\Source\TutorialIds.h" />
     <ClInclude Include="..\..\..\..\Source\TutorialManager.h" />
