Update MSVC project

--- a/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
+++ b/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
@@ -489,25 +489,90 @@
     <Text Include="..\..\..\..\Assets\Course\expl\ttriad-fmaj-treb.txt" />
     <Text Include="..\..\..\..\Assets\Course\expl\ttriad-gmaj-bass.txt" />
     <Text Include="..\..\..\..\Assets\Course\expl\ttriad-gmaj-treb.txt" />
-    <Text Include="..\..\..\..\Assets\Course\higher_or_lower.txt" />
-    <Text Include="..\..\..\..\Assets\Course\name_the_note.txt" />
-    <Text Include="..\..\..\..\Assets\Course\note-equivs.txt" />
-    <Text Include="..\..\..\..\Assets\Course\note-rest-names.txt" />
-    <Text Include="..\..\..\..\Assets\Course\note-rest-symbols.txt" />
-    <Text Include="..\..\..\..\Assets\Course\notes_on_bass_clef_with_accidentals.txt" />
-    <Text Include="..\..\..\..\Assets\Course\grade1.txt" />
-    <Text Include="..\..\..\..\Assets\Course\intervals.txt" />
-    <Text Include="..\..\..\..\Assets\Course\musical_symbols.txt" />
-    <Text Include="..\..\..\..\Assets\Course\musical_terms.txt" />
-    <Text Include="..\..\..\..\Assets\Course\notes_on_treble_clef.txt" />
-    <Text Include="..\..\..\..\Assets\Course\notes_on_treble_clef_with_accidentals.txt" />
-    <Text Include="..\..\..\..\Assets\Course\note_lengths.txt" />
-    <Text Include="..\..\..\..\Assets\Course\rest-equivs.txt" />
-    <Text Include="..\..\..\..\Assets\Course\whats_the_key_sig.txt" />
-    <Text Include="..\..\..\..\Assets\Course\whats_the_scale.txt" />
-    <Text Include="..\..\..\..\Assets\Course\whats_the_time_sig.txt" />
-    <Text Include="..\..\..\..\Assets\Course\whats_the_tonic_triad.txt" />
-    <Text Include="..\..\..\..\Assets\Course\which_clef.txt" />
+    <Text Include="..\..\..\..\Assets\Course\grade-1-level-1.txt" />
+    <Text Include="..\..\..\..\Assets\Course\grade-1-level-2.txt" />
+    <Text Include="..\..\..\..\Assets\Course\grade-1-level-3.txt" />
+    <Text Include="..\..\..\..\Assets\Course\grade-1-level-4.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level1\higher_or_lower.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level1\intervals.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level1\missing_rest.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level1\missing_time_sig.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level1\musical_symbols.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level1\musical_terms.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level1\name_the_note.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level1\note-equivs.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level1\note-rest-names.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level1\note-rest-symbols.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level1\notes_on_bass_clef_with_accidentals.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level1\notes_on_treble_clef.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level1\notes_on_treble_clef_with_accidentals.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level1\note_lengths.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level1\rest-equivs.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level1\time_sigs.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level1\whats_the_key_sig.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level1\whats_the_scale.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level1\whats_the_tonic_triad.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level1\which_clef.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level2\higher_or_lower.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level2\intervals.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level2\missing_rest.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level2\missing_time_sig.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level2\musical_symbols.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level2\musical_terms.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level2\name_the_note.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level2\note-equivs.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level2\note-rest-names.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level2\note-rest-symbols.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level2\notes_on_bass_clef_with_accidentals.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level2\notes_on_treble_clef.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level2\notes_on_treble_clef_with_accidentals.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level2\note_lengths.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level2\rest-equivs.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level2\time_sigs.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level2\whats_the_key_sig.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level2\whats_the_scale.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level2\whats_the_tonic_triad.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level2\which_clef.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level3\higher_or_lower.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level3\intervals.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level3\missing_rest.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level3\missing_time_sig.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level3\musical_symbols.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level3\musical_terms.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level3\name_the_note.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level3\note-equivs.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level3\note-rest-names.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level3\note-rest-symbols.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level3\notes_on_bass_clef_with_accidentals.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level3\notes_on_treble_clef.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level3\notes_on_treble_clef_with_accidentals.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level3\note_lengths.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level3\rest-equivs.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level3\time_sigs.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level3\whats_the_key_sig.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level3\whats_the_scale.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level3\whats_the_tonic_triad.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level3\which_clef.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level4\higher_or_lower.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level4\intervals.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level4\missing_rest.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level4\missing_time_sig.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level4\musical_symbols.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level4\musical_terms.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level4\name_the_note.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level4\note-equivs.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level4\note-rest-names.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level4\note-rest-symbols.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level4\notes_on_bass_clef_with_accidentals.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level4\notes_on_treble_clef.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level4\notes_on_treble_clef_with_accidentals.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level4\note_lengths.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level4\rest-equivs.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level4\time_sigs.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level4\whats_the_key_sig.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level4\whats_the_scale.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level4\whats_the_tonic_triad.txt" />
+    <Text Include="..\..\..\..\Assets\Course\level4\which_clef.txt" />
     <Text Include="..\..\..\..\Assets\en.txt" />
     <Text Include="..\..\..\..\Assets\Gui\blackboard_erase.txt" />
     <Text Include="..\..\..\..\Assets\Gui\boilerplate.txt" />
