--- a/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
+++ b/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
@@ -628,6 +628,7 @@
     <Text Include="..\..\..\..\Assets\Gui\stroke-rubout.txt" />
     <Text Include="..\..\..\..\Assets\Gui\tap-picture-note-lengths.txt" />
     <Text Include="..\..\..\..\Assets\Gui\tap-picture-note-lengths-quavers.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\tap-picture-treb-clef.txt" />
     <Text Include="..\..\..\..\Assets\Gui\tappables-1.txt" />
     <Text Include="..\..\..\..\Assets\Gui\tappables-2.txt" />
     <Text Include="..\..\..\..\Assets\Gui\text_bg_landscape.txt" />
